# appGame

./: .gitignore  Board类讲解.md  CMakeLists.txt  Doxyfile  README.md  gitlab-ci.yml  includebrueckengui_renderer.h  srcgui_renderer.cpp  test.md  test.txt  项目讲解.md
include/bruecken/: board.h  bruecken.h  common.h  gui_logic.h  gui_renderer.h  human_player.h  random_ai_player.h
lib/preset/: CMakeLists.txt
lib/preset/include/: argument_parser.h  board_config.h  logger.h  move.h  optional_features.h  player.h  player_gui_access.h  player_type.h  preset_info.h
lib/preset/src/: argument_parser.cpp  logger.cpp
src/: board.cpp  gui_logic.cpp  gui_renderer.cpp  human_player.cpp  main.cpp  random_ai_player.cpp
tests/: board_tests.cpp  test_gui_logic.cpp  test_invalid_move.cpp  test_player.cpp
